Fixed scrollbars

--- a/projects/motif-web-admin-core/src/assets/web-admin-core.scss
+++ b/projects/motif-web-admin-core/src/assets/web-admin-core.scss
@@ -522,6 +522,9 @@ section .header.sub-header h1 {
   transition: .1s;
 }
 
+.row.fill {
+  overflow:hidden;
+}
 
 
 .mini-switch .ui-inputswitch-slider {
